--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.3",
+    "@project-serum/anchor": "^0.22.1",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.5",
     "@solana/wallet-adapter-react-ui": "^0.9.7",
     "@solana/wallet-adapter-wallets": "^0.16.1",
-    "@solana/web3.js": "^1.44.2",
+    "@solana/web3.js": "^1.44.3",
     "axios": "^0.27.2",
     "next": "12.1.6",
-    "react": "18.2.0",
+    "react": "^17.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.0",
     "react-icons": "^4.4.0",
